src/snapshots/afrotd__parser__tests__rule_html_7.1.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.1.2 Shift und Fehlstart
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Shift. Nach einem Huddle (Regel 2.14.1) oder einem Shift
                (Regel 2.22.1) und vor dem Snap müssen alle Team A-Spieler für
                wenigstens eine volle Sekunde zum absoluten Stillstand kommen
                und stationär in ihren Positionen verharren, ohne Füße, Körper,
                Kopf oder Arme zu bewegen, bevor der Ball gesnappt wird (A.R.
                7.1.2.I).
                </li>
                <li>Fehlstart. Jede der nachfolgenden Aktionen ist ein
                Fehlstart durch Team A, wenn sich diese Aktionen vor dem Snap
                und nachdem der Ball spielbereit ist, ereignen und sich alle
                Spieler in einer Scrimmage Formation befinden:
                    <ol type="1">
                        <li>Jede Bewegung durch einen oder mehrerer Spieler,
                        die eine Aktion beim Snap simuliert. Das beinhaltet die
                        abrupte Positionsveränderung eines oder mehrerer
                        Spieler, welche durch diese Bewegung den Start des
                        Downs vortäuschen.
                        </li>
                        <li>Der Snapper bewegt sich zu einer anderen Position.
                        </li>
                        <li>Ein eingeschränkter Lineman (Regel 2.27.4) bewegt
                        seine Hand / Hände oder macht irgendeine schnelle
                        Bewegung (Ausnahmen:
                        </li>
                        <li>Es ist kein Fehlstart, wenn ein Team A-Lineman
                        sofort reagiert, wenn er von einem Team B-Spieler in
                        der neutralen Zone angegriffen wird (Regel 7.1.5.a.2)
                        (A.R. 7.1.3.V); 2. Regel 7.1.3.a.3).
                        </li>
                        <li>Ein Offense Spieler, der vor dem Snap irgendeine
                        schnelle, ruckartige Bewegung macht, was die
                        nachfolgenden Aktionen beinhaltet, jedoch nicht darauf
                        beschränkt ist:
                            <ol type="a">
                                <li>Ein Lineman, der seinen Fuß, seine
                                Schultern, Arm, Körper oder Kopf plötzlich in
                                irgendeine Richtung bewegt.
                                </li>
                                <li>Der Snapper, der den Ball schiebt, anhebt
                                oder bewegt, seine Daumen oder Finger bewegt,
                                seine Ellenbogen plötzlich anlegt, mit dem Kopf
                                ruckt oder mit Schultern oder Gesäß zuckt.
                                </li>
                                <li>Der Quarterback, der irgendeine schnelle,
                                plötzliche, ruckartige Bewegung macht, die den
                                Beginn des Downs vortäuscht.
                                </li>
                                <li>Ein Back, der durch irgendeine schnelle,
                                plötzliche, ruckartige Bewegung die Annahme des
                                Balles vortäuscht und damit den Beginn eines
                                Downs vortäuscht.
                                </li>
                            </ol>
                        </li>
                        <li>Das Offense Team steht, nachdem der Ball vor dem
                        Snap spielbereit ist, nicht für mindestens eine Sekunde
                        still (A.R. 7.1.2.IV). Das ist ein illegaler Shift, der
                        zu einem Fehlstart umgewandelt wird.
                        </li>
                    </ol>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.1.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
