src/snapshots/afrotd__parser__tests__rule_html_7.1.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.1.3 Einschränkungen der Offense – Vor dem Snap
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Jede der nachfolgenden Aktionen (a-d) sind Dead Ball Fouls.
                Schiedsrichter sollen abpfeifen und verhindern, dass das
                Spielgeschehen weiter fortgesetzt wird. Nachdem der Ball
                spielbereit ist und vor dem Snap:
            </p>
            <ol type="a">
                <li>Snapper. Der Snapper (Regel 2.27.8) darf:
                    <ol type="1">
                        <li>sich weder zu einer anderen Position bewegen noch
                        mit irgendeinem Körperteil jenseits der neutralen Zone
                        befinden.
                        </li>
                        <li>den Ball nicht anheben, ihn jenseits der neutralen
                        Zone bringen oder den Start des Downs vortäuschen.
                        </li>
                        <li>nur dann seine Hand (Hände) vom Ball nehmen, wenn
                        dadurch nicht der Start des Downs vorgetäuscht wird.
                        </li>
                    </ol>
                </li>
                <li>Neunmetermarkierungen.
                    <ol type="1">
                        <li>Jeder Team A-Ersatzspieler muss sich zwischen den
                        Neunmetermarkierungen befunden haben. Team A-Spieler,
                        die am vorherigen Down teilgenommen haben, müssen sich
                        nach dem vorherigen Down und vor dem nächsten Snap
                        zwischen den Neunmetermarkierungen befunden haben (A.R.
                        3.3.4.I).
                        </li>
                        <li>Alle Team A-Spieler müssen sich nach einem
                        Team-Timeout, einem Verletzungs-Timeout, einem
                        Radio-Timeout, einem MedienTimeout oder dem Ende einer
                        Periode zwischen den Neunmetermarkierungen befunden
                        haben.
                        </li>
                    </ol>
                </li>
                <li>Encroachment. Sobald der Snapper sich eingerichtet hat,
                darf kein anderer Team A-Spieler in oder jenseits der neutralen
                Zone sein (Ausnahmen: 1. Ersatzspieler und ausgewechselte
                Spieler und 2. Offense Spieler in einer Scrimmage
                Kick-Formation, die auf gegnerische Spieler zeigen und mit
                ihrer Hand oder ihren Händen die neutrale Zone durchbrechen).
                </li>
                <li>Fehlstart. Kein Team A-Spieler darf einen Fehlstart
                verursachen (Regel 7.1.2.b) oder einen Gegner berühren (A.R.
                7.1.3.III). Strafe (a-d): Dead Ball Foul: 5 Meter vom
                Succeeding Spot [S7 und S19 oder S20].
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.1.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
