src/snapshots/afrotd__parser__tests__rule_html_7.1.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.1.5 Einschränkungen der Defense
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Defense hat folgende Bedingungen zu erfüllen:
            </p>
            <ol type="a">
                <li>Jede der nachfolgenden Aktionen (1-5) sind Dead Ball Fouls.
                Schiedsrichter sollen abpfeifen und verhindern, dass das
                Spielgeschehen weiter fortgesetzt wird. Nachdem der Ball
                spielbereit ist und vor dem Snap:
                    <ol type="1">
                        <li>Kein Spieler darf den Ball, ausgenommen er wurde
                        entgegen Regel 7.1.3.a.2 illegal bewegt, oder einen
                        Gegner berühren oder ihn in einer anderen Weise
                        behindern (A.R. 7.1.5.I bis 7.1.5.II).
                        </li>
                        <li>Kein Spieler darf in die neutrale Zone eindringen
                        und dadurch einen Offense Linespieler dazu bringen,
                        sofort zu reagieren oder ein anderes Dead Ball Offside
                        Foul verursachen (Regeln 2.18.2 und 7.1.2.b.3-Ausnahme)
                        (A.R. 7.1.3.V und A.R. 7.1.5.III).
                        </li>
                        <li>Kein Spieler darf die neutrale Zone überqueren und
                        ohne Kontakt seine Bewegung in Richtung eines Backs
                        fortsetzen. Strafe (1-3): Dead Ball Foul, Offside. 5
                        Meter vom Succeeding Spot [S18]
                        </li>
                        <li>Spieler, die sich innerhalb eines Meters, stationär
                        oder in Bewegung, an der Scrimmage Line befinden,
                        dürfen keine schnellen, abrupten oder übertriebenen
                        Aktionen vornehmen, die Aktionen beim Snap simulieren
                        und die nicht Teil einer normalen Defense Bewegung
                        sind, sondern einen offensichtlicher Versuch
                        darstellen, die Offense zu einem Foul zu provozieren
                        (Fehlstart) (A.R. 7.1.5.IV).
                        </li>
                        <li>Kein Spieler darf Worte oder Signale benutzen, die
                        die Gegner verwirren könnten, wenn diese sich
                        bereitmachen, den Ball ins Spiel zu bringen. Kein
                        Spieler darf Defense Signale benutzen, die den Klang
                        oder den Charakter von Offense Startsignalen haben oder
                        diese Signale in anderer Weise behindern. Die Begriffe
                        „move“ und „stem“ sind Klangfolgen, die für die Defense
                        reserviert sind und dürfen nicht durch die Offense
                        genutzt werden. Die Offense darf als Startsignal in die
                        Hände klatschen und dieses Signal darf von der Defense
                        nicht genutzt werden (A.R.7.1.5.V). Strafe (4-5): Dead
                        Ball Foul, Spielverzögerung. 5 Meter vom Succeeding
                        Spot [S21].
                        </li>
                    </ol>
                </li>
                <li>Wenn der Snap beginnt:
                    <ol type="1">
                        <li>Kein Spieler darf sich beim Snap in oder jenseits
                        der neutralen Zone befinden.
                        </li>
                        <li>
                            <p>
                                Alle Spieler müssen sich inbounds befinden.
                            </p>
                            <p>
                                <strong>Strafe: Live Ball Foul. 5 Meter vom
                                Previous Spot [S18].</strong>
                            </p>
                        </li>
                    </ol>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.1.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
