src/snapshots/afrotd__parser__tests__rule_html_7.1.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.1.6 Ballübergabe nach vorne
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Spieler darf den Ball nach vorne übergeben, außer während
                eines Scrimmage Downs wie folgt:
            </p>
            <ol type="a">
                <li>Ein Team A-Back darf den Ball nur dann nach vorne zu einem
                anderen Back übergeben, wenn sich beide Spieler hinter ihrer
                Scrimmage Line befinden und der Spieler, der den Ball nach
                vorne übergibt, sich mit seinem gesamten Körper noch nicht
                jenseits der neutralen Zone befunden hat.
                </li>
                <li>
                    <p>
                        Ein Team A-Back, der sich hinter seiner Scrimmage Line
                        befindet, darf den Ball nach vorne zu einem Mitspieler
                        abgeben, der sich beim Snap an seiner Scrimmage Line
                        befindet, vorausgesetzt, dieser Mitspieler verließ
                        seine Position an der Scrimmage Line, indem er sich mit
                        beiden Füßen in Richtung seiner eigenen Endlinie
                        umdreht und sich wenigstens zwei Meter hinter seiner
                        Scrimmage Line befindet, wenn er den Ball erhält (A.R.
                        7.1.6.I).
                    </p>
                    <p>
                        <strong>Strafe: 5 Meter vom Spot of Foul; zusätzlich
                        Downverlust, wenn Team A das Foul während eines
                        Scrimmage Downs vor dem Wechsel des Team Ballbesitzes
                        verursacht [S35 und S9].</strong>
                    </p>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.1.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
