src/snapshots/afrotd__parser__tests__rule_html_7.2.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.2.3 Nachdem der Ball gesnappt wurde
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Offense Lineman darf einen von-Hand-zu-Hand-Snap
                empfangen.
            </p>
            <p>
                <strong>Strafe: Live Ball Foul, 5 Meter vom Previous Spot
                [S19].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.2.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
