src/snapshots/afrotd__parser__tests__rule_html_7.2.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.2.4 Im Aus
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Rückpass. Geht ein Rückpass zwischen den Goallines ins Aus,
                gehört der Ball zum werfenden Team am Out-of-bounds-Spot.
                </li>
                <li>Fumble. Geht ein Fumble zwischen den Goallines
                    <ol type="1">
                        <li>vom Fumble-Punkt nach vorne ins Aus, gehört der
                        Ball dem fumbelnden Team am Punkt des Fumbles (Regel
                        3.3.2.e.2);
                        </li>
                        <li>hinter dem Fumble-Punkt ins Aus, gehört der Ball
                        dem fumbelnden Team am Out-of-bounds-Spot.
                        </li>
                    </ol>
                </li>
                <li>Hinter oder jenseits Goalline. Geht ein Fumble oder ein
                Rückpass hinter oder jenseits einer Goalline ins Aus, ist es,
                je nach Antrieb und Verantwortlichkeit, ein Safety oder ein
                Touchback (Regeln 8.5.1, 8.6.1 und 8.7) (A.R. 7.2.4.I, A.R.
                8.6.1.I und 8.7.2.IV).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.2.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
